# skyproj

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package-pr-pip.yaml  python-package-pr.yml  python-package-publish.yml  python-package-push.yml  python-package.yml
docs/: basic_interface.rst  conf.py  index.rst  install.rst  maps.rst  modules.rst  projections.rst  quickstart.rst  surveys.rst
skyproj/: __init__.py  _docstrings.py  _skyproj.py  geodesics.c  geodesics.h  hpx_utils.py  mpl_utils.py  projections.c  projections.h  projections.py  skyaxes.py  skycrs.py  skygrid.py  skymap.py  skyproj.c  skyproj.h  skyproj.py  str_dict.c  str_dict.h  survey.py  thread_compat.h  transforms.py  utils.py
skyproj/data/: bliss-poly.txt  constellationsANDstars.json  decals-poly.txt  derosita-poly.txt  roman-hlwas-poly.txt
tests/: test_healpix_binning.py  test_healpix_maps.py  test_lines_polygons.py  test_milky_way.py  test_plotting.py  test_projections.py  test_skyproj.py  test_survey.py  test_tissot.py  test_tutorial.py  test_utils.py
tutorial/: README.md  tutorial_baseclass.ipynb  tutorial_healsparse.ipynb  tutorial_surveys.ipynb
ups/: skyproj.table
