[metadata]
name = skyproj
description = Python tools for making sky projections and maps
long_description = file: README.md
long_description_content_type = text/markdown
author = Eli Rykoff, Alex Drlica-Wagner, and others
url = https://github.com/lsstdesc/skyproj
author_email = erykoff@stanford.edu
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD-3-Clause
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
python_requires = >=3.7
install_requires =
  numpy
  astropy >= 4.0
  matplotlib >= 3.1
  healpy
  healsparse
  pyproj >= 3.1
tests_require =
  pytest
  flake8
  pytest-flake8
  jupyter
  nbconvert
zip_safe = True

[options.packages.find]
exclude =
  tests

[options.package_data]
skyproj = data/*.txt, data/*.dat

[flake8]
max-line-length = 110
ignore = E133, E226, E228, N802, N803, N806, N812, N815, N816, W503
exclude =
  **/__init__.py,
  docs,
  build

[tool:pytest]
addopts = --flake8
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N815 N816 W503
